// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentTimer model should be able to reset 1`] = `
Array [
  Object {
    "elapseTime": Object {
      "hours": 0,
      "minutes": 0,
      "seconds": 0,
      "totalSeconds": 0,
    },
    "intervalId": 14,
    "isRunning": true,
    "project": "123",
    "task": "999",
  },
  Object {
    "elapseTime": Object {
      "hours": 0,
      "minutes": 0,
      "seconds": 1,
      "totalSeconds": 1,
    },
    "intervalId": 14,
    "isRunning": true,
    "project": "123",
    "task": "999",
  },
  Object {
    "elapseTime": Object {
      "hours": 0,
      "minutes": 0,
      "seconds": 1,
      "totalSeconds": 1,
    },
    "intervalId": null,
    "isRunning": false,
    "project": "123",
    "task": "999",
  },
  Object {
    "elapseTime": Object {
      "hours": 0,
      "minutes": 0,
      "seconds": 1,
      "totalSeconds": 1,
    },
    "intervalId": 16,
    "isRunning": true,
    "project": "123",
    "task": "999",
  },
  Object {
    "elapseTime": Object {
      "hours": 0,
      "minutes": 0,
      "seconds": 2,
      "totalSeconds": 2,
    },
    "intervalId": 16,
    "isRunning": true,
    "project": "123",
    "task": "999",
  },
  Object {
    "elapseTime": Object {
      "hours": 0,
      "minutes": 0,
      "seconds": 2,
      "totalSeconds": 2,
    },
    "intervalId": null,
    "isRunning": false,
    "project": "123",
    "task": "999",
  },
  Object {
    "elapseTime": Object {
      "hours": 0,
      "minutes": 0,
      "seconds": 0,
      "totalSeconds": 0,
    },
    "intervalId": null,
    "isRunning": false,
    "project": "123",
    "task": "999",
  },
]
`;

exports[`CurrentTimer model should be able to stop 1`] = `
Array [
  Object {
    "elapseTime": Object {
      "hours": 0,
      "minutes": 0,
      "seconds": 0,
      "totalSeconds": 0,
    },
    "intervalId": 8,
    "isRunning": true,
    "project": "123",
    "task": "999",
  },
  Object {
    "elapseTime": Object {
      "hours": 0,
      "minutes": 0,
      "seconds": 1,
      "totalSeconds": 1,
    },
    "intervalId": 8,
    "isRunning": true,
    "project": "123",
    "task": "999",
  },
  Object {
    "elapseTime": Object {
      "hours": 0,
      "minutes": 0,
      "seconds": 1,
      "totalSeconds": 1,
    },
    "intervalId": null,
    "isRunning": false,
    "project": "123",
    "task": "999",
  },
]
`;
